--- a/tests/render-test/revision/result.html
+++ b/tests/render-test/revision/result.html
@@ -3,7 +3,8 @@
 .docx-wrapper>section.docx { background: white; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); margin-bottom: 30px; }
 .docx { color: black; hyphens: auto; }
 section.docx { box-sizing: border-box; display: flex; flex-flow: column nowrap; position: relative; overflow: hidden; }
-section.docx>article { margin-bottom: auto; }
+section.docx>article { margin-bottom: auto; z-index: 1; }
+section.docx>footer { z-index: 1; }
 .docx table { border-collapse: collapse; }
 .docx table td, .docx table th { vertical-align: top; }
 .docx p { margin: 0pt; min-height: 1em; }
