--- a/tests/render-test/header-footer/result.html
+++ b/tests/render-test/header-footer/result.html
@@ -1,105 +1,105 @@
 <!--docxjs library predefined styles--><style>
-.docx-wrapper { background: gray; padding: 30px; padding-bottom: 0px; display: flex; flex-flow: column; align-items: center; } 
-.docx-wrapper>section.docx { background: white; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); margin-bottom: 30px; }
-.docx { color: black; hyphens: auto; text-underline-position: from-font; }
-section.docx { box-sizing: border-box; display: flex; flex-flow: column nowrap; position: relative; overflow: hidden; }
-section.docx>article { margin-bottom: auto; z-index: 1; }
-section.docx>footer { z-index: 1; }
-.docx table { border-collapse: collapse; }
-.docx table td, .docx table th { vertical-align: top; }
-.docx p { margin: 0pt; min-height: 1em; }
-.docx span { white-space: pre-wrap; overflow-wrap: break-word; }
-.docx a { color: inherit; text-decoration: inherit; }
-</style><!--docxjs document theme values--><style>.docx {
-  --docx-majorHAnsi-font: Calibri Light;
-  --docx-minorHAnsi-font: Calibri;
-  --docx-dk1-color: #000000;
-  --docx-lt1-color: #FFFFFF;
-  --docx-dk2-color: #44546A;
-  --docx-lt2-color: #E7E6E6;
-  --docx-accent1-color: #4472C4;
-  --docx-accent2-color: #ED7D31;
-  --docx-accent3-color: #A5A5A5;
-  --docx-accent4-color: #FFC000;
-  --docx-accent5-color: #5B9BD5;
-  --docx-accent6-color: #70AD47;
-  --docx-hlink-color: #0563C1;
-  --docx-folHlink-color: #954F72;
-}
-</style><!--docxjs document styles--><style>.docx span {
-  font-family: Liberation Serif;
-}
-.docx p {
-  hyphens: none;
-}
-.docx p, p.docx_normal {
-}
-.docx p, p.docx_normal span {
-  min-height: 12.00pt;
-  font-size: 12.00pt;
-}
-.docx table, table.docx_tablenormal td {
-  padding-top: 0.00pt;
-  padding-left: 5.40pt;
-  padding-bottom: 0.00pt;
-  padding-right: 5.40pt;
-}
-p.docx_a {
-  margin-top: 12.00pt;
-  margin-bottom: 6.00pt;
-}
-p.docx_a span {
-  font-family: Liberation Sans;
-  min-height: 14.00pt;
-  font-size: 14.00pt;
-}
-p.docx_bodytext {
-  margin-bottom: 7.00pt;
-  line-height: 1.15;
-}
-p.docx_bodytext span {
-  min-height: 12.00pt;
-  font-size: 12.00pt;
-}
-p.docx_list {
-  margin-bottom: 7.00pt;
-  line-height: 1.15;
-}
-p.docx_list span {
-  min-height: 12.00pt;
-  font-size: 12.00pt;
-}
-p.docx_caption {
-  margin-top: 6.00pt;
-  margin-bottom: 6.00pt;
-}
-p.docx_caption span {
-  font-style: italic;
-  min-height: 12.00pt;
-  font-size: 12.00pt;
-}
-p.docx_a0 {
-}
-p.docx_a0 span {
-  min-height: 12.00pt;
-  font-size: 12.00pt;
-}
-p.docx_a1 {
-}
-p.docx_a1 span {
-  min-height: 12.00pt;
-  font-size: 12.00pt;
-}
-p.docx_header {
-}
-p.docx_header span {
-  min-height: 12.00pt;
-  font-size: 12.00pt;
-}
-p.docx_footer {
-}
-p.docx_footer span {
-  min-height: 12.00pt;
-  font-size: 12.00pt;
-}
-</style><div class="docx-wrapper"><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header style="margin-top: calc(-42.3pt); min-height: calc(42.3pt);"><p class="docx_header"><span lang="en-US">First Header</span></p><p class="docx_header"></p><p class="docx_header"><span lang="en-US">That bigger than top margin</span></p><p class="docx_header"></p><p class="docx_header"><span lang="en-US">Header end</span></p></header><article><p><span lang="en-US">Content</span><span></span></p></article><footer style="margin-bottom: calc(-27.95pt); min-height: calc(27.95pt);"><p class="docx_footer"><span lang="en-US">First Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header style="margin-top: calc(-42.3pt); min-height: calc(42.3pt);"><p class="docx_header"><span lang="en-US">Even Header</span></p></header><article><p><span></span></p></article><footer style="margin-bottom: calc(-27.95pt); min-height: calc(27.95pt);"><p class="docx_footer"><span lang="en-US">Even Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header style="margin-top: calc(-42.3pt); min-height: calc(42.3pt);"><p class="docx_header"><span lang="en-US">Odd Header</span></p></header><article><p></p></article><footer style="margin-bottom: calc(-27.95pt); min-height: calc(27.95pt);"><p class="docx_footer"><span lang="en-US">Odd Footer</span></p></footer></section></div>
+  .docx-wrapper { background: gray; padding: 30px; padding-bottom: 0px; display: flex; flex-flow: column; align-items: center; } 
+  .docx-wrapper>section.docx { background: white; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); margin-bottom: 30px; }
+  .docx { color: black; hyphens: auto; text-underline-position: from-font; }
+  section.docx { box-sizing: border-box; display: flex; flex-flow: column nowrap; position: relative; overflow: hidden; }
+  section.docx>article { margin-bottom: auto; z-index: 1; }
+  section.docx>footer { z-index: 1; }
+  .docx table { border-collapse: collapse; }
+  .docx table td, .docx table th { vertical-align: top; }
+  .docx p { margin: 0pt; min-height: 1em; }
+  .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
+  .docx a { color: inherit; text-decoration: inherit; }
+  </style><!--docxjs document theme values--><style>.docx {
+    --docx-majorHAnsi-font: Calibri Light;
+    --docx-minorHAnsi-font: Calibri;
+    --docx-dk1-color: #000000;
+    --docx-lt1-color: #FFFFFF;
+    --docx-dk2-color: #44546A;
+    --docx-lt2-color: #E7E6E6;
+    --docx-accent1-color: #4472C4;
+    --docx-accent2-color: #ED7D31;
+    --docx-accent3-color: #A5A5A5;
+    --docx-accent4-color: #FFC000;
+    --docx-accent5-color: #5B9BD5;
+    --docx-accent6-color: #70AD47;
+    --docx-hlink-color: #0563C1;
+    --docx-folHlink-color: #954F72;
+  }
+  </style><!--docxjs document styles--><style>.docx span {
+    font-family: Liberation Serif;
+  }
+  .docx p {
+    hyphens: none;
+  }
+  .docx p, p.docx_normal {
+  }
+  .docx p, p.docx_normal span {
+    min-height: 12.00pt;
+    font-size: 12.00pt;
+  }
+  .docx table, table.docx_tablenormal td {
+    padding-top: 0.00pt;
+    padding-left: 5.40pt;
+    padding-bottom: 0.00pt;
+    padding-right: 5.40pt;
+  }
+  p.docx_a {
+    margin-top: 12.00pt;
+    margin-bottom: 6.00pt;
+  }
+  p.docx_a span {
+    font-family: Liberation Sans;
+    min-height: 14.00pt;
+    font-size: 14.00pt;
+  }
+  p.docx_bodytext {
+    margin-bottom: 7.00pt;
+    line-height: 1.15;
+  }
+  p.docx_bodytext span {
+    min-height: 12.00pt;
+    font-size: 12.00pt;
+  }
+  p.docx_list {
+    margin-bottom: 7.00pt;
+    line-height: 1.15;
+  }
+  p.docx_list span {
+    min-height: 12.00pt;
+    font-size: 12.00pt;
+  }
+  p.docx_caption {
+    margin-top: 6.00pt;
+    margin-bottom: 6.00pt;
+  }
+  p.docx_caption span {
+    font-style: italic;
+    min-height: 12.00pt;
+    font-size: 12.00pt;
+  }
+  p.docx_a0 {
+  }
+  p.docx_a0 span {
+    min-height: 12.00pt;
+    font-size: 12.00pt;
+  }
+  p.docx_a1 {
+  }
+  p.docx_a1 span {
+    min-height: 12.00pt;
+    font-size: 12.00pt;
+  }
+  p.docx_header {
+  }
+  p.docx_header span {
+    min-height: 12.00pt;
+    font-size: 12.00pt;
+  }
+  p.docx_footer {
+  }
+  p.docx_footer span {
+    min-height: 12.00pt;
+    font-size: 12.00pt;
+  }
+  </style><div class="docx-wrapper"><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header style="margin-top: calc(-56.4px); min-height: calc(56.4px);"><p class="docx_header"><span lang="en-US">First Header</span></p><p class="docx_header"></p><p class="docx_header"><span lang="en-US">That bigger than top margin</span></p><p class="docx_header"></p><p class="docx_header"><span lang="en-US">Header end</span></p></header><article><p><span lang="en-US">Content</span><span></span></p></article><footer style="margin-bottom: calc(-37.2667px); min-height: calc(37.2667px);"><p class="docx_footer"><span lang="en-US">First Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header style="margin-top: calc(-56.4px); min-height: calc(56.4px);"><p class="docx_header"><span lang="en-US">Even Header</span></p></header><article><p><span></span></p></article><footer style="margin-bottom: calc(-37.2667px); min-height: calc(37.2667px);"><p class="docx_footer"><span lang="en-US">Even Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header style="margin-top: calc(-56.4px); min-height: calc(56.4px);"><p class="docx_header"><span lang="en-US">Odd Header</span></p></header><article><p></p></article><footer style="margin-bottom: calc(-37.2667px); min-height: calc(37.2667px);"><p class="docx_footer"><span lang="en-US">Odd Footer</span></p></footer></section></div>
